--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_timetable_setup">TimetableSetup</string>
+    <string name="subject">Subject:</string>
+    <string name="start_time">Start Time:</string>
+    <string name="end_time">End Time:</string>
+    <string name="add_new_subject">Add New Subject</string>
+    <string name="day">Day:</string>
 </resources>
