Setup is complete, but lacking a way to save progress and signal finish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="end_time">End Time:</string>
     <string name="add_new_subject">Add New Subject</string>
     <string name="day">Day:</string>
+    <string name="save">Save</string>
+    <string name="done">Done</string>
 </resources>
